--- a/R/DESCRIPTION
+++ b/R/DESCRIPTION
@@ -2,8 +2,8 @@ Package: SCRABBLE
 Type: Package
 Title: Impute scRNAseq Data Method
 Version: 0.0.1
-Author: Tao Peng
-Maintainer: The package maintainer Tao Peng <software.github@gmail.com>
+Author: Tao Peng; Kai Tan
+Maintainer: Tao Peng <software.github@gmail.com>
 Description: It aims to impute drop-out data by optimizing an objective function 
    that consists of three terms. The first term ensures that imputed values for 
    genes with nonzero expression remain as close to their original values as possible, 
